--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -7,7 +7,7 @@ BUILD_TEST_TASK_TEMPLATE: &BUILD_TEST_TASK_TEMPLATE
     node test.js
 
 linux_amd64_task:  
-  only_if: $CIRRUS_CHANGE_TITLE =~ '.*\[ci(linux)\].*'
+  only_if: $CIRRUS_CHANGE_TITLE =~ 'ci\(linux\).*'
   env:
     matrix:
       - IMAGE: node:12-slim
@@ -44,7 +44,7 @@ linux_arm64_task:
 
 
 mac_task:
-  only_if: $CIRRUS_CHANGE_TITLE =~ '.*\[ci(mac)\].*'
+  only_if: $CIRRUS_CHANGE_TITLE =~ 'ci\(mac\).*'
   macos_instance:
     image: ghcr.io/cirruslabs/macos-ventura-base:latest
   env:
@@ -199,6 +199,7 @@ windows_task:
   windows_container:
     image: cirrusci/windowsservercore:2019
   env:
+    CIRRUS_SHELL: powershell
     matrix:
       - NODE_VERSION: 12
       - NODE_VERSION: 14
@@ -209,6 +210,7 @@ windows_task:
       - NODE_VERSION: 20
   install_script: |
     choco install --yes nvs
+    $env:NODE_VERSION = '${NODE_VERSION}'
     refreshenv
     nvs add ${NODE_VERSION}
     nvs use ${NODE_VERSION}
@@ -216,7 +218,7 @@ windows_task:
   << : *BUILD_TEST_TASK_TEMPLATE
 
 freebsd_task:
-  only_if: $CIRRUS_CHANGE_TITLE =~ '.*\[ci(freebsd)\].*'
+  only_if: $CIRRUS_CHANGE_TITLE =~ 'ci\(freebsd\).*'
   freebsd_instance:
     image_family: freebsd-13-0
   env:
