--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -200,6 +200,7 @@ windows_task:
     image: cirrusci/windowsservercore:2019
   env:
     CIRRUS_SHELL: powershell
+    PATH:  C:\ProgramData\chocolatey\bin:${PATH}
     matrix:
       - NODE_VERSION: 12
       - NODE_VERSION: 14
@@ -210,8 +211,6 @@ windows_task:
       - NODE_VERSION: 20
   install_script: |
     choco install --yes nvs
-    $env:NODE_VERSION = '${NODE_VERSION}'
-    refreshenv
     nvs add ${NODE_VERSION}
     nvs use ${NODE_VERSION}
     node --version
