--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -202,17 +202,18 @@ windows_task:
     CIRRUS_SHELL: powershell
     PATH:  C:\ProgramData\chocolatey\bin:${PATH}
     matrix:
-      - NODE_VERSION: 12
-      - NODE_VERSION: 14
-      - NODE_VERSION: 15
+      # - NODE_VERSION: 12
+      # - NODE_VERSION: 14
+      # - NODE_VERSION: 15
       - NODE_VERSION: 16
-      - NODE_VERSION: 18
-      - NODE_VERSION: 19
-      - NODE_VERSION: 20
+      # - NODE_VERSION: 18
+      # - NODE_VERSION: 19
+      # - NODE_VERSION: 20
   install_script: |
     choco install --yes nvs
-    nvs add ${NODE_VERSION}
-    nvs use ${NODE_VERSION}
+    refreshenv
+    nvs add 16
+    nvs use 16
     node --version
   << : *BUILD_TEST_TASK_TEMPLATE
 
@@ -223,13 +224,13 @@ freebsd_task:
   env:
     NVS_HOME: ${HOME}/.nvs
     matrix:
-      - NODE_VERSION: 12
-      - NODE_VERSION: 14
-      - NODE_VERSION: 15
-      - NODE_VERSION: 16
-      - NODE_VERSION: 18
-      - NODE_VERSION: 19
-      - NODE_VERSION: 20
+      # # - NODE_VERSION: 12
+      # # - NODE_VERSION: 14
+      # # - NODE_VERSION: 15
+      # - NODE_VERSION: 16
+      # # - NODE_VERSION: 18
+      # # - NODE_VERSION: 19
+      # # - NODE_VERSION: 20
   install_script: |
     pkg update --yes && pkg upgrade --yes 
     pkg install --yes curl git
