--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -199,8 +199,8 @@ windows_task:
   windows_container:
     image: cirrusci/windowsservercore:2019
   env:
-    CIRRUS_SHELL: powershell
-    PATH:  C:\ProgramData\chocolatey\bin:${PATH}
+    # CIRRUS_SHELL: powershell
+    # PATH:  C:\ProgramData\chocolatey\bin:${PATH}
     matrix:
       # - NODE_VERSION: 12
       # - NODE_VERSION: 14
