--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -2,7 +2,7 @@ BUILD_TEST_TASK_TEMPLATE: &BUILD_TEST_TASK_TEMPLATE
   arch_check_script:
     - uname -am
   test_script: |
-    script/download-libs.sh
+    bash script/download-libs.sh
     npm install
     node test.js
 
