ci(win): refreshenv after choco before next step

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -209,13 +209,16 @@ windows_task:
       # - NODE_VERSION: 18
       # - NODE_VERSION: 19
       # - NODE_VERSION: 20
-  install_script: |
+  install_choco_script: |
     choco install --yes nvs
     refreshenv
+  download_ffi_script: bash script/download-libs.sh
+  test_node_16_script: |
     nvs add 16
     nvs use 16
     node --version
-  << : *BUILD_TEST_TASK_TEMPLATE
+    npm install
+    node test.js
 
 freebsd_task:
   only_if: $CIRRUS_CHANGE_TITLE =~ 'ci\(freebsd\).*'
