--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -199,7 +199,7 @@ windows_task:
   windows_container:
     image: cirrusci/windowsservercore:2019
   env:
-    # CIRRUS_SHELL: powershell
+    CIRRUS_SHELL: powershell
     # PATH:  C:\ProgramData\chocolatey\bin:${PATH}
     matrix:
       # - NODE_VERSION: 12
@@ -209,8 +209,8 @@ windows_task:
       # - NODE_VERSION: 18
       # - NODE_VERSION: 19
       # - NODE_VERSION: 20
-  install_choco_script: |
-    choco install --yes nvs cmake visualstudio2019buildtools
+  # install_choco_script: |
+  #   choco install --yes nvs cmake visualstudio2019buildtools
   download_ffi_script: bash script/download-libs.sh
   test_node_18_script: |
     refreshenv
