ci(win): koffi install nvs

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -199,7 +199,7 @@ windows_task:
   windows_container:
     image: cirrusci/windowsservercore:2019
   env:
-    CIRRUS_SHELL: powershell
+    # CIRRUS_SHELL: powershell
     # PATH:  C:\ProgramData\chocolatey\bin:${PATH}
     matrix:
       # - NODE_VERSION: 12
