--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -7,7 +7,7 @@ BUILD_TEST_TASK_TEMPLATE: &BUILD_TEST_TASK_TEMPLATE
     node test.js
 
 linux_amd64_task:  
-  # only_if: $CIRRUS_CHANGE_TITLE =~ 'ci\(linux\).*'
+  only_if: $CIRRUS_CHANGE_TITLE =~ 'ci\(linux\).*'
   env:
     matrix:
       - IMAGE: node:12-slim
@@ -25,7 +25,7 @@ linux_amd64_task:
   << : *BUILD_TEST_TASK_TEMPLATE
 
 linux_arm64_task: 
-  # only_if: $CIRRUS_CHANGE_TITLE =~ '.*\[ci(linux)\].*'
+  only_if: $CIRRUS_CHANGE_TITLE =~ '.*\[ci(linux)\].*'
   env:
     matrix:
       - IMAGE: node:12-slim
@@ -44,7 +44,7 @@ linux_arm64_task:
 
 
 mac_task:
-  # only_if: $CIRRUS_CHANGE_TITLE =~ 'ci\(mac\).*'
+  only_if: $CIRRUS_CHANGE_TITLE =~ 'ci\(mac\).*'
   macos_instance:
     image: ghcr.io/cirruslabs/macos-ventura-base:latest
   env:
@@ -195,7 +195,7 @@ mac_task:
 
 
 windows_task:
-  # only_if: $CIRRUS_CHANGE_TITLE =~ 'ci\(win\).*'
+  only_if: $CIRRUS_CHANGE_TITLE =~ 'ci\(win\).*'
   windows_container:
     image: cirrusci/windowsservercore:2019
   env:
@@ -218,8 +218,7 @@ windows_task:
     ls ffi/win32-x64
     refreshenv
     nvs add 18
-    nvs link 18
-    refreshenv
+    nvs use 18
     node --version
     npm install --ignore-scripts
     node test.js
@@ -235,7 +234,7 @@ windows_task:
     node test.js
 
 freebsd_task:
-  # only_if: $CIRRUS_CHANGE_TITLE =~ 'ci\(freebsd\).*'
+  only_if: $CIRRUS_CHANGE_TITLE =~ 'ci\(freebsd\).*'
   freebsd_instance:
     image_family: freebsd-13-0
   env:
