ci(win): nvm refresh env

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -216,6 +216,7 @@ windows_task:
     ls ffi
     ls ffi/win32-arm64
     ls ffi/win32-x64
+    refresh env
     nvm install 18
     nvm use 18
     node --version
