--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -200,7 +200,7 @@ windows_task:
     image: cirrusci/windowsservercore:2019
   env:
     # CIRRUS_SHELL: powershell
-    # PATH:  C:\ProgramData\chocolatey\bin:${PATH}
+    PATH: C:\ProgramData\chocolatey\lib\nvm\bin:${PATH}
     matrix:
       # - NODE_VERSION: 12
       # - NODE_VERSION: 14
@@ -216,7 +216,6 @@ windows_task:
     ls ffi
     ls ffi/win32-arm64
     ls ffi/win32-x64
-    refreshenv
     nvm install 18
     nvm use 18
     node --version
