--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,14 +9,18 @@ jobs:
       fail-fast: false
       matrix:
         os: ['ubuntu-latest', 'windows-latest','macos-latest']
-        node-version: [12.x,14.x,15.x,16.x,18.x,19.x,20.x]
+        node-version: [12.x,13.x,14.x,15.x,16.x,17.x,18.x,19.x,20.x]
+        architecture:
+          - x64
+          # - x86
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
-      - name: Setup node
+      - name: Node ${{ matrix.node-version }} - ${{ matrix.architecture }} on ${{ matrix.os }}
         uses: actions/setup-node@v3
         with:
-          node-version: ${{ matrix.node }}
+          node-version: ${{ matrix.node-version }}
+          architecture: ${{ matrix.architecture }}
       - run: bash script/download-libs.sh
       - run: npm ci --ignore-scripts
       - run: node test.js
