--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,5 +22,5 @@ jobs:
           node-version: ${{ matrix.node-version }}
           architecture: ${{ matrix.architecture }}
       - run: bash script/download-libs.sh
-      - run: npm ci --ignore-scripts
+      - run: npm install --ignore-scripts
       - run: node test.js
