--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,7 +9,7 @@ jobs:
       fail-fast: false
       matrix:
         os: ['ubuntu-latest', 'windows-latest','macos-latest']
-        node-version: [12.x,13.x,14.x,15.x,16.x,17.x,18.x,19.x,20.x]
+        node-version: [12.x,14.x,15.x,16.x,17.x,18.x,19.x,20.x]
         architecture:
           - x64
           # - x86
