--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
   "dependencies": {
     "koffi": "^2.3.19"
+  },
+  "devDependencies": {
+    "@types/node": "^18.15.13",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.4"
   }
 }
