--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "scripts": {
     "compile": "tsc",
-    "test": "node PactFfi.js"
+    "test": "npm run test:hello && npm run test:http && npm run test:plugin",
+    "test:hello": "ts-node PactFfi.ts",
+    "test:http":"ts-node grpc.test.ts",
+    "test:plugin":"ts-node http.test.ts"
   },
   "dependencies": {
     "koffi": "^2.3.19"
