--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "scripts": {
     "compile": "tsc",
     "test": "npm run test:hello && npm run test:http && npm run test:plugin",
-    "test:hello": "ts-node PactFfi.ts",
+    "test:hello": "ts-node PactKoffi.ts",
     "test:http":"ts-node grpc.test.ts",
     "test:plugin":"ts-node http.test.ts"
   },
