chore verification handle

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "test": "npm run test:hello && npm run test:http && npm run test:plugin",
     "test:hello": "ts-node PactKoffi.ts",
     "test:http":"ts-node grpc.test.ts",
-    "test:plugin":"ts-node http.test.ts"
+    "test:plugin":"ts-node http.test.ts",
+    "test:verifier":"ts-node verifier.test.ts"
   },
   "dependencies": {
     "koffi": "^2.3.19"
